se modifico contacto

--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
                 </fieldset>
                             
 
-                <label class="check-box"><input type="checkbox" checked>¿Le gustaría recibir novedades de la Barbería ALURA?</label>
+                <label class="check-box"><input type="checkbox" checked>¿Le gustaría recibir novedades de Entretejidos Crochet de Naomi.</label>
                 
                 <input type="submit" value="Enviar Formulario" class="enviar">
             </form>
